--- a/style.css
+++ b/style.css
@@ -326,3 +326,11 @@ button, input, *:hover {
 .good {
 	background: #00e600;
 }
+
+.error-info{
+	height: 100%;
+	width: 100%;
+	text-align: center;
+	box-sizing: border-box;
+	padding-top: 38%;
+}
