--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body{
 	margin-top: 15%;
 }
 
-*:hover, img, button, a{
+*:hover, img, button, a, input{
 	-webkit-transition: all 0.5s ease;
 	-moz-transition: all 0.5s ease;
 	-o-transition: all 0.5s ease;
@@ -206,73 +206,6 @@ div.language a:hover{
 	color: orange;
 }
 
-#registration {
-	width: 350px;
-	left: 50%;
-	margin-left: -200px;
-	border-radius: 5px;
-	opacity: 0.9;
-}
-
-.form-control {
-	width: 250px;
-	margin: 0 auto;
-	margin-top: 25px;
-}
-
-#registration > h3 {
-	margin: 10px auto;
-	padding: 10px 20px 0px;
-	box-sizing: border-box;
-	text-align: center;
-}
-
-.form-input {
-	width: 250px;
-	padding: 5px 10px;
-	box-sizing: border-box;
-	font-size: 12pt;
-	color: #495057;
-	border-radius: 7px;
-	border: 2px solid #000;
-	display: block;
-	margin: 5px 0 10px;
-}
-
-.myBtn {
-	font-weight: 700;
-	border-radius: 250px;
-	font-size: 12pt;
-	padding: 10px;
-	text-transform: uppercase;
-	letter-spacing: 3px;
-	margin: 10px auto;
-	min-width: 150px;
-	color: #FFF;
-	background-color: #0000ff;
-	border: none;
-}
-
-.myBtn:hover {
-	background: orange;
-	color: #000;
-	cursor: pointer;
-}
-
-button, input, *:hover {
-	-webkit-transition: all.6s ease;
-	-moz-transition: all.6s ease;
-	-ms-transition: all.6s ease;
-	transition: all.6s ease;
-	text-decoration: none;
-}
-
-.reg { background: #00e600; }
-
-.form-control > .myBtn {
-	display: block;
-}
-
 .enf{margin:0 auto;}
 
 .noselect{
@@ -308,25 +241,6 @@ button, input, *:hover {
 .good {
 	background: #00e600;
 }
-
-.error-info{
-	height: 100%;
-	width: 100%;
-	text-align: center;
-	box-sizing: border-box;
-	padding-top: 38%;
-}
-
-.order-button{
-	width: 150px;
-	padding: 5px;
-	margin: 0px 0px 0px 80px;
-	position: relative;
-}
-	.order-button:hover{
-		background: green;
-		border: 3px solid green;
-	}
 	
 .centered-text{
 	text-align: center;
@@ -356,26 +270,6 @@ button, input, *:hover {
 	font-size: 1.5em;
 }
 
-.basket-list{
-	width: 500px !important;
-	top: 35% !important;
-	left: 37% !important;
-}
-
-.item-order{
-	padding: 15px;
-	box-sizing: border-box;
-	display:block;
-}
-
-.item-order div{
-	display:inline-block;
-}
-
-.n-button{
-	right: 0;
-	margin-left: 35%;
-}
 /*-----NEW-----*/
 
 .btn-abs {
@@ -456,4 +350,8 @@ ol.breadcrumb {
 
 .td {
 	text-decoration: none!important;
+}
+
+.fleft{
+	margin-left: 10%;
 }
